--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,19 @@
 #
 #==============================================================================+
 
+# pre-reqs
+
+- name: Install Python SELinux library.
+  yum: name=libselinux-python state=present
+
+- name: Ensure SELinux is enabled in `targeted` mode.
+  selinux: policy=targeted state=enforcing
+
+- name: Ensure httpd can connect to the network.
+  seboolean: name=httpd_can_network_connect state=yes persistent=yes
+
+# install FreeIPA
+
 - include: set-system-hostname.yml
 - include: set-hosts.yml
 - include: set-resolv.conf.yml
