add cs9demo lab
create role used by cs9demo lab playbook

--- a/tasks/set-firewall.yml
+++ b/tasks/set-firewall.yml
@@ -1,6 +1,6 @@
 ---
 #==============================================================================+
-# Description : Playbook to run server tasks for a FreeIPA install
+# Description : Enable Firewall ports used by FreeIPA Server
 #
 # Supported OS: EL7
 #
