--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,20 @@
 - name: upgrade all packages
   yum: name=* state=latest
 
+- name: Install EPEL repo.
+  yum:
+    name: "{{ epel_repo_url }}"
+    state: present
+  register: result
+  until: '"failed" not in result'
+  retries: 5
+  delay: 10
+
+- name: Import EPEL GPG key.
+  rpm_key:
+    key: "{{ epel_repo_gpg_key_url }}"
+    state: present
+
 - name: install IPA software group
   yum: name={{item}} state=present
   with_items:
