--- a/tasks/set-firewall.yml
+++ b/tasks/set-firewall.yml
@@ -10,6 +10,8 @@
 
 - name: start firewalld service
   service: name=firewalld state=started enabled=yes
+  tags:
+    - freeipa
 
 - name: Configure open ports with firewalld.
   firewalld:
@@ -32,3 +34,5 @@
     - { state: 'enabled', port: '464/udp' }
     - { state: 'enabled', port: '53/udp' }
     - { state: 'enabled', port: '123/udp' }
+  tags:
+    - freeipa
