--- a/tasks/set-system-hostname.yml
+++ b/tasks/set-system-hostname.yml
@@ -12,4 +12,5 @@
 - name: Creates the /etc/hostname file 
   template: src=etc-hostname.j2 dest=/etc/hostname owner=root group=root mode=0644
   when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
-
+  tags:
+    - freeipa
