--- a/tasks/set-timeserver.yml
+++ b/tasks/set-timeserver.yml
@@ -10,10 +10,14 @@
 
 - name: Ensure NTP (for time synchronization) is installed.
   yum: name=ntp state=present
+  become: yes
+  become_user: root
   tags:
     - freeipa
 
 - name: Ensure NTP is running.
   service: name=ntpd state=started enabled=yes
+  become: yes
+  become_user: root
   tags:
     - freeipa
