--- a/tasks/install-free-ipa.yml
+++ b/tasks/install-free-ipa.yml
@@ -8,12 +8,22 @@
 #
 #==============================================================================+
 
+- name: remove packages
+  yum: name={{ item }} state=absent
+  with_items:
+   - chronyd
+  become: yes
+  become_user: root
+  tags:
+    - freeipa
+
 - name: Install ipa-server packages
   yum: name={{ item }} state=present
   with_items:
    - ipa-server 
    - bind 
    - bind-dyndb-ldap
+   - ipa-server-dns
   become: yes
   become_user: root
   tags:
